unpackaged/main/default/objects/Account/fields/Equipment_Maintenance_Fee__c.field-meta.xml
<CustomField>
    <fullName>Equipment_Maintenance_Fee__c</fullName>
    <label>Equipment Maintenance Fee</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>