unpackaged/main/default/objects/Account/fields/Established_Cashio__c.field-meta.xml
<CustomField>
    <fullName>Established_Cashio__c</fullName>
    <label>Established (Cashio)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>