unpackaged/main/default/objects/Account/fields/Estimated_Average_AMEX_Ticket__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Average_AMEX_Ticket__c</fullName>
    <label>Estimated Average AMEX Ticket</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>