unpackaged/main/default/objects/Account/fields/Estimated_Average_Ticket__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Average_Ticket__c</fullName>
    <label>Bank Service Fee</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>