unpackaged/main/default/objects/Account/fields/Existing_Amex__c.field-meta.xml
<CustomField>
    <fullName>Existing_Amex__c</fullName>
    <label>Existing Amex #</label>
    <length>30</length>
    <type>Text</type>
</CustomField>