unpackaged/main/default/objects/Account/fields/Expected_Monthly_AMEX_Card_Sales__c.field-meta.xml
<CustomField>
    <fullName>Expected_Monthly_AMEX_Card_Sales__c</fullName>
    <label>Expected Monthly AMEX Card Sales</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>