unpackaged/main/default/objects/Account/fields/Fast_Funding_Monthly_Service__c.field-meta.xml
<CustomField>
    <fullName>Fast_Funding_Monthly_Service__c</fullName>
    <label>Fast Funding Monthly Service</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>