unpackaged/main/default/objects/Account/fields/Fax_for_Email__c.field-meta.xml
<CustomField>
    <fullName>Fax_for_Email__c</fullName>
    <description>This is where you put the fax # followed by the fax companies domain (13233433333@rcfax.com)</description>
    <label>Fax for Email</label>
    <type>Email</type>
</CustomField>