unpackaged/main/default/objects/Account/fields/Fed_Tax_ID__c.field-meta.xml
<CustomField>
    <fullName>Fed_Tax_ID__c</fullName>
    <label>Federal Tax ID</label>
    <length>10</length>
    <type>Text</type>
</CustomField>