unpackaged/main/default/objects/Account/fields/First_Terminal_Type__c.field-meta.xml
<CustomField>
    <fullName>First_Terminal_Type__c</fullName>
    <label>First Terminal Type</label>
    <length>30</length>
    <type>Text</type>
</CustomField>