unpackaged/main/default/objects/Account/fields/FirstAndLast_1__c.field-meta.xml
<CustomField>
    <fullName>FirstAndLast_1__c</fullName>
    <formula>Full_Name_1__c + " " +  Last_Name_1__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>FirstAndLast 1</label>
    <type>Text</type>
</CustomField>