unpackaged/main/default/objects/Account/fields/FirstAndLast_2__c.field-meta.xml
<CustomField>
    <fullName>FirstAndLast_2__c</fullName>
    <formula>Full_Name_2__c + " " +  Last_Name_2__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>FirstAndLast 2</label>
    <type>Text</type>
</CustomField>