unpackaged/main/default/objects/Account/fields/Full_Name_1__c.field-meta.xml
<CustomField>
    <fullName>Full_Name_1__c</fullName>
    <description>First Name of Lead.</description>
    <label>First Name(1)</label>
    <length>80</length>
    <type>Text</type>
</CustomField>