unpackaged/main/default/objects/Account/fields/Gross_Monthly_Sales_All_revenue__c.field-meta.xml
<CustomField>
    <fullName>Gross_Monthly_Sales_All_revenue__c</fullName>
    <label>Gross Monthly Sales (All revenue)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>