unpackaged/main/default/objects/Account/fields/Has_Bankruptcy_Been_Discharged__c.field-meta.xml
<CustomField>
    <fullName>Has_Bankruptcy_Been_Discharged__c</fullName>
    <label>Has Bankruptcy Been Discharged:</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Not Applicable</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>