unpackaged/main/default/objects/Account/fields/Have_you_ever_used_a_Business_Cash_Advan__c.field-meta.xml
<CustomField>
    <fullName>Have_you_ever_used_a_Business_Cash_Advan__c</fullName>
    <label>Have you ever used a Business Cash Advan</label>
    <length>10</length>
    <type>Text</type>
</CustomField>