unpackaged/main/default/objects/Account/fields/Have_You_Filed_for_Bankruptcy__c.field-meta.xml
<CustomField>
    <fullName>Have_You_Filed_for_Bankruptcy__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Have You Filed for Bankruptcy</label>
    <type>Checkbox</type>
</CustomField>