unpackaged/main/default/objects/Account/fields/High_Monthly_Volume__c.field-meta.xml
<CustomField>
    <fullName>High_Monthly_Volume__c</fullName>
    <label>High Monthly Volume</label>
    <precision>7</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>