unpackaged/main/default/objects/Account/fields/High_Ticket__c.field-meta.xml
<CustomField>
    <fullName>High_Ticket__c</fullName>
    <label>High Ticket</label>
    <precision>7</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>