unpackaged/main/default/objects/Account/fields/Home_Phone__c.field-meta.xml
<CustomField>
    <fullName>Home_Phone__c</fullName>
    <label>Home Phone</label>
    <type>Phone</type>
</CustomField>