unpackaged/main/default/objects/Account/fields/Home_Property_Type__c.field-meta.xml
<CustomField>
    <fullName>Home_Property_Type__c</fullName>
    <label>Home Property Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Rent</fullName>
            </value>
            <value>
                <fullName>Own</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>