unpackaged/main/default/objects/Account/fields/If_Debit_PIN_PAD_Type__c.field-meta.xml
<CustomField>
    <fullName>If_Debit_PIN_PAD_Type__c</fullName>
    <label>If Debit PIN PAD Type</label>
    <length>30</length>
    <type>Text</type>
</CustomField>