unpackaged/main/default/objects/Account/fields/If_Purchase__c.field-meta.xml
<CustomField>
    <fullName>If_Purchase__c</fullName>
    <label>If Purchase, choose equipment</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Terminal</fullName>
            </value>
            <value>
                <fullName>Printer</fullName>
            </value>
            <value>
                <fullName>PINPad</fullName>
            </value>
            <value>
                <fullName>Software</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>