unpackaged/main/default/objects/Account/fields/If_Yes_What_Are_The_Months_of_Operation__c.field-meta.xml
<CustomField>
    <fullName>If_Yes_What_Are_The_Months_of_Operation__c</fullName>
    <label>If Yes, What Are The Months of Operation</label>
    <length>30</length>
    <type>Text</type>
</CustomField>