unpackaged/main/default/objects/Account/fields/Industry_As_stated_on_application__c.field-meta.xml
<CustomField>
    <fullName>Industry_As_stated_on_application__c</fullName>
    <label>Industry - (As stated on application)</label>
    <length>70</length>
    <type>Text</type>
</CustomField>