unpackaged/main/default/objects/Account/fields/Industry_Cashio__c.field-meta.xml
<CustomField>
    <fullName>Industry_Cashio__c</fullName>
    <label>Industry (Cashio)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>