unpackaged/main/default/objects/Account/fields/Industry_Type__c.field-meta.xml
<CustomField>
    <fullName>Industry_Type__c</fullName>
    <label>Industry Type</label>
    <length>30</length>
    <type>Text</type>
</CustomField>