unpackaged/main/default/objects/Account/fields/Interchange_Pricing__c.field-meta.xml
<CustomField>
    <fullName>Interchange_Pricing__c</fullName>
    <label>Interchange Pricing</label>
    <length>20</length>
    <type>Text</type>
</CustomField>