unpackaged/main/default/objects/Account/fields/Internet__c.field-meta.xml
<CustomField>
    <fullName>Internet__c</fullName>
    <label>Internet</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>