unpackaged/main/default/objects/Account/fields/Internet_Gateway_Monthly_Access__c.field-meta.xml
<CustomField>
    <fullName>Internet_Gateway_Monthly_Access__c</fullName>
    <label>Internet Gateway Monthly Access</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>