unpackaged/main/default/objects/Account/fields/Is_the_Business_Property_Leased_Owned__c.field-meta.xml
<CustomField>
    <fullName>Is_the_Business_Property_Leased_Owned__c</fullName>
    <label>Is the Business Property Leased/Owned?</label>
    <length>100</length>
    <type>Text</type>
</CustomField>