unpackaged/main/default/objects/Account/fields/Is_there_a_PSF__c.field-meta.xml
<CustomField>
    <fullName>Is_there_a_PSF__c</fullName>
    <label>Is there a PSF</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>