unpackaged/main/default/objects/Account/fields/Landlord_Mortgage_Company_Contact__c.field-meta.xml
<CustomField>
    <fullName>Landlord_Mortgage_Company_Contact__c</fullName>
    <label>Landlord/Mortgage Company Contact</label>
    <length>30</length>
    <type>Text</type>
</CustomField>