unpackaged/main/default/objects/Account/fields/Landlord_Mortgage_Phone_2__c.field-meta.xml
<CustomField>
    <fullName>Landlord_Mortgage_Phone_2__c</fullName>
    <label>Landlord/Mortgage Phone 2</label>
    <type>Phone</type>
</CustomField>