unpackaged/main/default/objects/Account/fields/Landlord_Mortgage_Phone__c.field-meta.xml
<CustomField>
    <fullName>Landlord_Mortgage_Phone__c</fullName>
    <label>Landlord/Mortgage Phone</label>
    <type>Phone</type>
</CustomField>