unpackaged/main/default/objects/Account/fields/Last_Funded_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Funded_Date__c</fullName>
    <label>Last Funded Date</label>
    <summarizedField>Opportunity.CloseDate</summarizedField>
    <summaryFilterItems>
        <field>Opportunity.StageName</field>
        <operation>equals</operation>
        <value>Funded</value>
    </summaryFilterItems>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>