unpackaged/main/default/objects/Account/fields/Last_Name_1__c.field-meta.xml
<CustomField>
    <fullName>Last_Name_1__c</fullName>
    <description>This feeds from the Lead</description>
    <label>Last Name(1)</label>
    <length>50</length>
    <type>Text</type>
</CustomField>