unpackaged/main/default/objects/Account/fields/Lease_Mortgage_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Lease_Mortgage_Start_Date__c</fullName>
    <label>Lease/Mortgage Start Date</label>
    <type>Date</type>
</CustomField>