unpackaged/main/default/objects/Account/fields/Leased_or_Owned__c.field-meta.xml
<CustomField>
    <fullName>Leased_or_Owned__c</fullName>
    <label>Leased or Owned</label>
    <length>30</length>
    <type>Text</type>
</CustomField>