unpackaged/main/default/objects/Account/fields/Leased_Owned_Picklist__c.field-meta.xml
<CustomField>
    <fullName>Leased_Owned_Picklist__c</fullName>
    <label>Leased/Owned (Picklist)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Rent</fullName>
            </value>
            <value>
                <fullName>Own</fullName>
            </value>
            <value>
                <fullName>Leased</fullName>
                <isActive>false</isActive>
                <label>Leased</label>
            </value>
            <value>
                <fullName>Owned</fullName>
                <isActive>false</isActive>
                <label>Owned</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>