unpackaged/main/default/objects/Account/fields/Legal_Address__c.field-meta.xml
<CustomField>
    <fullName>Legal_Address__c</fullName>
    <label>Address</label>
    <length>80</length>
    <type>Text</type>
</CustomField>