unpackaged/main/default/objects/Account/fields/Legal_City__c.field-meta.xml
<CustomField>
    <fullName>Legal_City__c</fullName>
    <label>City</label>
    <length>40</length>
    <type>Text</type>
</CustomField>