unpackaged/main/default/objects/Account/fields/Legal_Name__c.field-meta.xml
<CustomField>
    <fullName>Legal_Name__c</fullName>
    <description>Legal spelling of biz name</description>
    <label>Legal Business Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>