unpackaged/main/default/objects/Account/fields/Legal_State__c.field-meta.xml
<CustomField>
    <fullName>Legal_State__c</fullName>
    <label>State</label>
    <length>2</length>
    <type>Text</type>
</CustomField>