unpackaged/main/default/objects/Account/fields/Legal_Zip__c.field-meta.xml
<CustomField>
    <fullName>Legal_Zip__c</fullName>
    <label>Zip</label>
    <length>5</length>
    <type>Text</type>
</CustomField>