unpackaged/main/default/objects/Account/fields/Length_of_Ownership__c.field-meta.xml
<CustomField>
    <fullName>Length_of_Ownership__c</fullName>
    <label>Length of Ownership</label>
    <length>10</length>
    <type>Text</type>
</CustomField>