unpackaged/main/default/objects/Account/fields/Mailer_ID__c.field-meta.xml
<CustomField>
    <fullName>Mailer_ID__c</fullName>
    <label>Mailer ID</label>
    <length>9</length>
    <type>Text</type>
</CustomField>