unpackaged/main/default/objects/Account/fields/Make_and_Model_of_Credit_Card_Terminal_P__c.field-meta.xml
<CustomField>
    <fullName>Make_and_Model_of_Credit_Card_Terminal_P__c</fullName>
    <label>Make and Model of Credit Card Terminal/P</label>
    <length>40</length>
    <type>Text</type>
</CustomField>