unpackaged/main/default/objects/Account/fields/Merchant_ID_Number__c.field-meta.xml
<CustomField>
    <fullName>Merchant_ID_Number__c</fullName>
    <description>Merchant ID Number</description>
    <label>Merchant ID Number</label>
    <length>30</length>
    <type>Text</type>
</CustomField>