unpackaged/main/default/objects/Account/fields/Merchant_Number_12__c.field-meta.xml
<CustomField>
    <fullName>Merchant_Number_12__c</fullName>
    <label>Merchant Number</label>
    <length>30</length>
    <type>Text</type>
</CustomField>