unpackaged/main/default/objects/Account/fields/Merchant_Services_Phone__c.field-meta.xml
<CustomField>
    <fullName>Merchant_Services_Phone__c</fullName>
    <description>Current MS phone number</description>
    <label>Merchant Services Phone</label>
    <type>Phone</type>
</CustomField>