unpackaged/main/default/objects/Account/fields/Monthly_Payment_if_applicable__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Payment_if_applicable__c</fullName>
    <label>What is monthly rent/mortgage payment?</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>