unpackaged/main/default/objects/Account/fields/Monthly_Rent_Mortgage__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Rent_Mortgage__c</fullName>
    <label>Monthly Rent/Mortgage</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>