unpackaged/main/default/objects/Account/fields/Name_of_Bank__c.field-meta.xml
<CustomField>
    <fullName>Name_of_Bank__c</fullName>
    <description>Name of Bank</description>
    <label>Name of Bank</label>
    <length>255</length>
    <type>Text</type>
</CustomField>