unpackaged/main/default/objects/Account/fields/Name_of_Processor__c.field-meta.xml
<CustomField>
    <fullName>Name_of_Processor__c</fullName>
    <label>Name of Processor</label>
    <length>255</length>
    <type>Text</type>
</CustomField>