unpackaged/main/default/objects/Account/fields/New_Amex__c.field-meta.xml
<CustomField>
    <fullName>New_Amex__c</fullName>
    <defaultValue>false</defaultValue>
    <label>New Amex #</label>
    <type>Checkbox</type>
</CustomField>