unpackaged/main/default/objects/Account/fields/No_of_locations__c.field-meta.xml
<CustomField>
    <fullName>No_of_locations__c</fullName>
    <label>No. of locations</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>