unpackaged/main/default/objects/Account/fields/Num_Of_Opps_Belongs_To_Aiden_Admin__c.field-meta.xml
<CustomField>
    <fullName>Num_Of_Opps_Belongs_To_Aiden_Admin__c</fullName>
    <description>Num Of Opps Belongs To Aiden (Admin)</description>
    <inlineHelpText>Num Of Opps Belongs To Aiden (Admin)</inlineHelpText>
    <label>Num Of Opps Belongs To Aiden (Admin)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>