unpackaged/main/default/objects/Account/fields/Num_Of_Opps_Belongs_To_Ron_Admin__c.field-meta.xml
<CustomField>
    <fullName>Num_Of_Opps_Belongs_To_Ron_Admin__c</fullName>
    <description>The number of opportunities belongs to Ron. Admin purpose.</description>
    <inlineHelpText>The number of opportunities belongs to Ron. Admin purpose.</inlineHelpText>
    <label>Num Of Opps Belongs To Ron (Admin)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>