unpackaged/main/default/objects/Account/fields/Number_of_Days_Positive_vs_Negative__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Days_Positive_vs_Negative__c</fullName>
    <description>Number of Days Positive vs. Negative</description>
    <label>Number of Days Positive vs. Negative</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>