unpackaged/main/default/objects/Account/fields/Number_of_NSFs__c.field-meta.xml
<CustomField>
    <fullName>Number_of_NSFs__c</fullName>
    <description>Number of NSF's</description>
    <label>Number of NSF's</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>