unpackaged/main/default/objects/Account/fields/Online_Access_Monthly_Maintenance__c.field-meta.xml
<CustomField>
    <fullName>Online_Access_Monthly_Maintenance__c</fullName>
    <label>Online Access Monthly Maintenance</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>