unpackaged/main/default/objects/Account/fields/Opportunity_Count__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Count__c</fullName>
    <description>This Roll up counts the amount of opportunities on the account</description>
    <label>Opportunity Count</label>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>