unpackaged/main/default/objects/Account/fields/Owner_With_Most_Credit_Score__c.field-meta.xml
<CustomField>
    <fullName>Owner_With_Most_Credit_Score__c</fullName>
    <formula>IF( ISNULL(Partner_2_Credit_Score__c) || Partner_1_Credit_Score__c  &gt;= Partner_2_Credit_Score__c, 1, 2)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Owner With Most Credit Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>