unpackaged/main/default/objects/Account/fields/Partner_1_Credit_Score__c.field-meta.xml
<CustomField>
    <fullName>Partner_1_Credit_Score__c</fullName>
    <label>Credit Score(1)</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>