unpackaged/main/default/objects/Account/fields/Partner_1_Date_of_Birth__c.field-meta.xml
<CustomField>
    <fullName>Partner_1_Date_of_Birth__c</fullName>
    <label>Partner 1 Date of Birth</label>
    <type>Date</type>
</CustomField>