unpackaged/main/default/objects/Account/fields/Partner_1_First_Name__c.field-meta.xml
<CustomField>
    <fullName>Partner_1_First_Name__c</fullName>
    <label>Partner 1 First Name</label>
    <length>30</length>
    <type>Text</type>
</CustomField>