unpackaged/main/default/objects/Account/fields/Partner_1_Home_Phone__c.field-meta.xml
<CustomField>
    <fullName>Partner_1_Home_Phone__c</fullName>
    <label>Partner 1 Home Phone</label>
    <type>Phone</type>
</CustomField>