unpackaged/main/default/objects/Account/fields/Partner_1_Last_Name__c.field-meta.xml
<CustomField>
    <fullName>Partner_1_Last_Name__c</fullName>
    <label>Partner 1 Last Name</label>
    <length>30</length>
    <type>Text</type>
</CustomField>