unpackaged/main/default/objects/Account/fields/Partner_1_Middle_Name__c.field-meta.xml
<CustomField>
    <fullName>Partner_1_Middle_Name__c</fullName>
    <label>Middle Name(1)</label>
    <length>30</length>
    <type>Text</type>
</CustomField>