unpackaged/main/default/objects/Account/fields/Partner_1_Ownership_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Partner_1_Ownership_Percentage__c</fullName>
    <label>Partner 1 Ownership Percentage</label>
    <length>250</length>
    <type>Text</type>
</CustomField>