unpackaged/main/default/objects/Account/fields/Partner_1_Social_Security__c.field-meta.xml
<CustomField>
    <fullName>Partner_1_Social_Security__c</fullName>
    <label>Partner 1 Social Security</label>
    <length>250</length>
    <type>Text</type>
</CustomField>