unpackaged/main/default/objects/Account/fields/Partner_1_State__c.field-meta.xml
<CustomField>
    <fullName>Partner_1_State__c</fullName>
    <label>Partner 1 State</label>
    <length>2</length>
    <type>Text</type>
</CustomField>