unpackaged/main/default/objects/Account/fields/Partner_1_Title__c.field-meta.xml
<CustomField>
    <fullName>Partner_1_Title__c</fullName>
    <label>Title(1)</label>
    <length>30</length>
    <type>Text</type>
</CustomField>