unpackaged/main/default/objects/Account/fields/Partner_1_Zip__c.field-meta.xml
<CustomField>
    <fullName>Partner_1_Zip__c</fullName>
    <label>Partner 1 Zip</label>
    <length>250</length>
    <type>Text</type>
</CustomField>