unpackaged/main/default/objects/Account/fields/Partner_2_City__c.field-meta.xml
<CustomField>
    <fullName>Partner_2_City__c</fullName>
    <label>Partner 2 City</label>
    <length>30</length>
    <type>Text</type>
</CustomField>