unpackaged/main/default/objects/Account/fields/Partner_2_Drivers_License__c.field-meta.xml
<CustomField>
    <fullName>Partner_2_Drivers_License__c</fullName>
    <label>Partner 2 Drivers License</label>
    <length>30</length>
    <type>Text</type>
</CustomField>