unpackaged/main/default/objects/Account/fields/Partner_2_First_Name__c.field-meta.xml
<CustomField>
    <fullName>Partner_2_First_Name__c</fullName>
    <label>Partner 2 First Name</label>
    <length>30</length>
    <type>Text</type>
</CustomField>