unpackaged/main/default/objects/Account/fields/Partner_2_Home_Address__c.field-meta.xml
<CustomField>
    <fullName>Partner_2_Home_Address__c</fullName>
    <label>Partner 2 Home Address</label>
    <length>50</length>
    <type>Text</type>
</CustomField>