unpackaged/main/default/objects/Account/fields/Partner_2_Home_Phone__c.field-meta.xml
<CustomField>
    <fullName>Partner_2_Home_Phone__c</fullName>
    <label>Partner 2 Home Phone</label>
    <type>Phone</type>
</CustomField>