unpackaged/main/default/objects/Account/fields/Partner_2_Middle_Name__c.field-meta.xml
<CustomField>
    <fullName>Partner_2_Middle_Name__c</fullName>
    <label>Middle Name(2)</label>
    <length>30</length>
    <type>Text</type>
</CustomField>