unpackaged/main/default/objects/Account/fields/Partner_2_Percentage_of_Ownership__c.field-meta.xml
<CustomField>
    <fullName>Partner_2_Percentage_of_Ownership__c</fullName>
    <label>Partner 2 Percentage of Ownership</label>
    <length>250</length>
    <type>Text</type>
</CustomField>