unpackaged/main/default/objects/Account/fields/Partner_2_Social_Security__c.field-meta.xml
<CustomField>
    <fullName>Partner_2_Social_Security__c</fullName>
    <label>Partner 2 Social Security</label>
    <length>250</length>
    <type>Text</type>
</CustomField>